# SimpleGameEngine

./: .gitignore  Bullet.cpp  Bullet.h  CMakeLists.txt  Errors.cpp  Errors.h  GLSLprogram.cpp  GLSLprogram.h  GLTexture.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  MainGame.cpp  MainGame.h  ResourceManager.h  Sprite.cpp  Sprite.h  TextureCache.cpp  Vertex.h  main.cpp  picoPNG.cpp
BallGame/: Ball.cpp  Ball.h  BallController.cpp  BallController.h  BallRenderer.cpp  BallRenderer.h  CMakeLists.txt  Grid.cpp  Grid.h  MainGame.cpp  MainGame.h  main.cpp
BallGame/Shaders/: textureShading.vert
Engine/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Camera2D.cpp  Camera2D.h  DebugRenderer.cpp  DebugRenderer.h  Engine.cpp  Engine.h  EngineErrors.cpp  EngineErrors.h  Errors.cpp  Errors.h  GLSLprogram.cpp  GLSLprogram.h  GLTexture.h  GUI.cpp  GUI.h  IGameScreen.h  IMainGame.cpp  IMainGame.h  IOManager.cpp  IOManager.h  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  ParticleBatch2D.cpp  ParticleBatch2D.h  ParticleEngine2D.cpp  ParticleEngine2D.h  ResourceManager.cpp  ResourceManager.h  ScreenList.cpp  ScreenList.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h  SpriteFont.cpp  (+10 more)
Levels/: level1.txt
NinjaPlatformer/: App.cpp  App.h  Box.cpp  Box.h  CMakeLists.txt  Capsule.cpp  Capsule.h  EditorScreen.cpp  EditorScreen.h  GameplayScreen.cpp  GameplayScreen.h  Light.h  MainMenuScreen.cpp  MainMenuScreen.h  Player.cpp  Player.h  ScreenIndices.h  main.cpp
NinjaPlatformer/Shaders/: lightShading.frag  lightShading.vert
Shaders/: colorShading.frag
ZombieGame/: Agent.cpp  Agent.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Gun.cpp  Gun.h  Human.cpp  Human.h  Level.cpp  Level.h  MainGame.cpp  MainGame.h  Player.cpp  Player.h  Zombie.cpp  Zombie.h  main.cpp
ZombieGame/Levels/: level1.txt
cmake/: FindBox2D.cmake
engine/: Camera2D.cpp  Camera2D.h  Errors.cpp  GLSLprogram.cpp  GLSLprogram.h  GLTexture.h  IOManager.cpp  ImageLoader.cpp  ImageLoader.h  InputManager.cpp  InputManager.h  ResourceManager.cpp  Sprite.cpp  Sprite.h  SpriteBatch.cpp  TextureCache.cpp  TextureCache.h  Timing.cpp  Timing.h  Vertex.h  Window.cpp  Window.h  picoPNG.cpp  picoPNG.h
shaders/: colorShading.frag  colorShading.vert
